--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         <div class="form-inline right">
             <ul class="nav">
                 <li>
-                    <h2><a href="/" class="nav-link mt-2">24KOINZ</a></h2>
+                    <h2><a href="/" class="nav-link mt-2" style="color: white;">24KOINZ</a></h2>
                 </li>
                 {% if user.is_authenticated %}
                 <li>
@@ -140,7 +140,7 @@
 
 <footer>
     <div class="footer center">
-        <a href="https://wa.me/08123350738" target="_blank">Feedback</a>
+        <a href="https://wa.me/08123350738" target="_blank" style="color: wheat;">Feedback</a>
     </div>
 </footer>
 </html>
