--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
             <h3>LOGIN</h3>
         </div>
         <div class="info">
-            <input type="text" name="username" placeholder="Username or Email">
+            <input type="text" name="username" placeholder="Username">
             <input type="password" name="password" placeholder="Password">
         </div>
         {% if form.errors %}
